--- a/Suthesis-2e.sty
+++ b/Suthesis-2e.sty
@@ -557,6 +557,10 @@ of Doctor of Philosophy.
         \iffigurespage
                 \listoffigures
         \fi
+
+        % Super nice adding numbers to the text boxes
+        \tcblistof[\chapter*]{infobox}{\listboxname}
+
         \cleardoublepage
         \pagenumbering{arabic}
         %\pagestyle{headings}
