Added Figures to all chapters and initiated Appendix files for all chapters. Main text file for chapter 4-6 are not initiated yet.

--- a/PJK_Thesis.tex
+++ b/PJK_Thesis.tex
@@ -144,9 +144,9 @@
 \appendix
 \include{Chapter2/Chapter2Appendix}
 \include{Chapter3/Chapter3Appendix}
-% \include{Chapter4/Chapter4Appendix}
-% \include{Chapter5/Chapter5Appendix}
-% \include{Chapter6/Chapter6Appendix}
+\include{Chapter4/Chapter4Appendix}
+\include{Chapter5/Chapter5Appendix}
+\include{Chapter6/Chapter6Appendix}
 
 
 %% BIBLIOGRAPHY
