Added overall Abstract to the dissertation

--- a/Preface/Abstract.tex
+++ b/Preface/Abstract.tex
@@ -1,3 +1,11 @@
 \prefacesection{Abstract}
-What causes species diversity to vary among different places? Answers for this question can help sustain biodiversity and its stability, which has been a significant challenge under aggravating threat of species loss. In response, ecologists have devised a long list of theories to explain the maintenance of species diversity. Community ecologists have expanded from the classic focus of species competition to consider the effects of non-competitive interactions and multiple trophic levels, thus better reflecting the complexity of natural systems. However, as multiple mechanisms operate simultaneously to shape species diversity, a general predictive framework would be difficult if theories continue to be developed with little crosstalk. Plants and their soil microbial communities represent one association where the players are engaged in complex interactions that remain not fully explored. Plants interact with a wide variety of soil microbes, ranging from pathogenic to mutualistic microbes that have various degrees of host specificity. Plants can also indirectly influence the performance of nearby competitors by modifying soil microbial communities, which is commonly studied under the framework of plant--soil feedback. Moreover, these plant--soil microbe interactions are inherently age-dependent as it takes time for plants to condition the soil, an aspect that remains rarely studied. Explicit consideration of the temporal dynamics of these interactions, however, can have critical implications in both natural and agricultural systems, guiding plant restoration, invasion control, and agricultural practices. In this dissertation, I explore the complementarity of different frameworks for understanding species coexistence and, with plant--soil microbe association as an example, highlight the multi-trophic and age-dependent nature of ecological communities. 
-
+Ecologists have devised a long list of theories to predict when species diversity can be maintained, focusing on species interactions ranging from resource competition to multi-trophic interactions. 
+However, these theories have mostly been developed separately with little crosstalk and have ignored the temporal complexity of ecological communities by assuming that the strength of species interactions are static through time.
+In this dissertation, I explore the complementarity of different theoretical frameworks for understanding species coexistence and, with plant--soil microbe associations as an example, highlight the multi-trophic and age-dependent nature of ecological communities. 
+To study how multiple mechanisms interactively determine species coexistence, I propose to quantify the effects of different mechanisms with the stabilizing and equalizing processes of modern coexistence theory. 
+First, I show how differences in traits related to resource competition translate to changes in the two components of modern coexistence theory, which can then be used as a common currency for understanding coexistence and priority effects.
+Second, I expand this framework to discuss how the function and host specificity of soil microbes affect plant competitive outcome.
+Finally, to study the temporal development of plant--soil microbe interactions, I use a series of aerial photos to construct a chronosequence of plant individual age for four coastal foredune perennial plants.
+By collecting soils beneath plant individuals of different ages for three consecutive years, I find that soil microbial communities are converging, and becoming progressively different from bare sand communities, with increasing plant age.
+With a greenhouse experiment that preserves age-specific soil microbial communities, I show that compositional turnovers of soil microbes translate into temporally varying plant--soil microbe interactions, and different plant--soil combinations have different temporal development patterns.
+Taken together, my dissertation demonstrates an approach synthesizing the effects of different trophic levels and interaction types, and informs our understanding of how species' interactions are coordinated in time.
