Added Chapter 5 (microbial community convergence) and Chapter 6 (temporal PSF) to the dissertation.

--- a/PJK_Thesis.tex
+++ b/PJK_Thesis.tex
@@ -136,8 +136,8 @@
 \include{Chapter2/Chapter2}
 \include{Chapter3/Chapter3}
 % \include{Chapter4/Chapter4}
-% \include{Chapter5/Chapter5}
-% \include{Chapter6/Chapter6}
+\include{Chapter5/Chapter5}
+\include{Chapter6/Chapter6}
 
 
 %% END MATERIAL
