--- a/Preface/Abstract.tex
+++ b/Preface/Abstract.tex
@@ -1,8 +1,8 @@
 \prefacesection{Abstract}
 Ecologists have devised a long list of theories to predict when species diversity can be maintained, focusing on species interactions ranging from resource competition to multi-trophic interactions. 
-However, these theories have mostly been developed separately with little crosstalk and have ignored the temporal complexity of ecological communities by assuming that the strength of species interactions are static through time.
+However, these theories have mostly been developed separately with little crosstalk and have ignored the temporal complexity of ecological communities by assuming that the strength of species interactions are static throughout time.
 In this dissertation, I explore the complementarity of different theoretical frameworks for understanding species coexistence and, with plant--soil microbe associations as an example, highlight the multi-trophic and age-dependent nature of ecological communities. 
-To study how multiple mechanisms interactively determine species coexistence, I propose to quantify the effects of different mechanisms with the stabilizing and equalizing processes of modern coexistence theory. 
+To study how multiple mechanisms interactively determine species coexistence, I quantify the effects of different mechanisms with the stabilizing and equalizing processes of modern coexistence theory. 
 First, I show how differences in traits related to resource competition translate to changes in the two components of modern coexistence theory, which can then be used as a common currency for understanding coexistence and priority effects.
 Second, I expand this framework to discuss how the function and host specificity of soil microbes affect plant competitive outcome.
 Finally, to study the temporal development of plant--soil microbe interactions, I use a series of aerial photos to construct a chronosequence of plant individual age for four coastal foredune perennial plants.
