Stylistic changes in the dissertation file and reference bibilography

--- a/PJK_Thesis.tex
+++ b/PJK_Thesis.tex
@@ -66,6 +66,7 @@
 \usepackage{tabularx}
 \usepackage{comment}
 \usepackage{fancyhdr}
+\usepackage[nottoc,numbib]{tocbibind}
 
 % For table
 \newenvironment{myindentpar}[1]%
