Further minor stylistic changes to reflect duplicated citations across different chapters.

--- a/ThesisBibliography.bib
+++ b/ThesisBibliography.bib
@@ -594,7 +594,7 @@ url="https://doi.org/10.1007/s11258-016-0697-3"
   journal={Nature Reviews Microbiology},
   volume={9},
   number={2},
-  pages={119},
+  pages={119--130},
   year={2011},
   publisher={Nature Publishing Group}
 }
@@ -2111,7 +2111,7 @@ eprint = {https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.13215}
 }
 
 
-@article{Reinhart2010,
+@article{Reinhart2010b,
 author = {Reinhart, Kurt O. and Royo, Alejandro a. and Kageyama, Stacie A. and Clay, Keith},
 doi = {10.1016/j.actao.2010.07.006},
 file = {:Users/Chris/Library/Application Support/Mendeley Desktop/Downloaded/Reinhart et al. - 2010 - Canopy gaps decrease microbial densities and disease risk for a shade-intolerant tree species.pdf:pdf},
@@ -2343,7 +2343,7 @@ title = {{Release of invasive plants from fungal and viral pathogens}},
 year = {2003}
 }
 
-@article{Callaway2004,
+@article{Callaway2004b,
 author = {Callaway, Ragan M and Thelen, Giles C and Rodriguez, Alex and Holben, William E},
 doi = {10.1038/nature02322},
 file = {:Users/Chris/Library/Application Support/Mendeley Desktop/Downloaded/Callaway et al. - 2004 - Soil biota and exotic plant invasion.pdf:pdf},
@@ -2360,6 +2360,19 @@ volume = {427},
 year = {2004}
 }
 
+@article{Callaway2004,
+author = {Callaway, Ragan M. and Thelen, Giles C. and Barth, Sara and Ramsey, Philip W. and Gannon, James E.},
+title = {Soil fungi alter interactions between the invader \textit{{C}entaurea maculosa} and north {A}merican natives},
+journal = {Ecology},
+year = {2004},
+volume = {85},
+number = {4},
+pages = {1062-1071},
+keywords = {Centaurea, communities, competition, fungi, invasive exotics, mutualism, mycorrhizae, phospholipid fatty acids (PLFA), rhizosphere, soil microbes, spotted knapweed, weeds},
+doi = {10.1890/02-0775},
+url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/02-0775},
+eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/02-0775}
+}
 
 @article{Klironomos2002,
 author = {Klironomos, John N},
@@ -7680,7 +7693,7 @@ url = {http://doi.wiley.com/10.1111/j.1365-2745.2011.01833.x},
 volume = {99},
 year = {2011}
 }
-@article{HilleRisLambers2012,
+@article{Hillerislambers2012,
 abstract = {Although research on the role of competitive interactions during community assembly began decades ago, a recent revival of interest has led to new discoveries and research opportunities. Using contemporary coexistence theory that emphasizes stabilizing niche differences and relative fitness differences, we evaluate three empirical approaches for studying community assembly. We show that experimental manipulations of the abiotic or biotic environment, assessments of trait-phylogeny-environment relationships, and investigations of frequency-dependent population growth all suggest strong influences of stabilizing niche differences and fitness differences on the outcome of plant community assembly. Nonetheless, due to the limitations of these approaches applied in isolation, we still have a poor understanding of which niche axes and which traits determine the outcome of competition and community structure. Combining current approaches represents our best chance of achieving this goal, which is fundamental to ...},
 author = {HilleRisLambers, Janneke and Adler, Peter B and Harpole, W.S. and Levine, Jonathan M and Mayfield, M.M.},
 doi = {10.1146/annurev-ecolsys-110411-160411},
