--- a/Preface/Abstract.tex
+++ b/Preface/Abstract.tex
@@ -1,4 +1,5 @@
 \prefacesection{Abstract}
+\doublespacing
 Ecologists have devised a long list of theories to predict when species diversity can be maintained, focusing on species interactions ranging from resource competition to multi-trophic interactions. 
 However, these theories have mostly been developed separately with little crosstalk and have ignored the temporal complexity of ecological communities by assuming that the strength of species interactions are static throughout time.
 In this dissertation, I explore the complementarity of different theoretical frameworks for understanding species coexistence and, with plant--soil microbe associations as an example, highlight the multi-trophic and age-dependent nature of ecological communities. 
