--- a/Preface/Acknowledgement.tex
+++ b/Preface/Acknowledgement.tex
@@ -1,2 +1,40 @@
 \prefacesection{Acknowledgements}
-I thank my family, Ariel, Taiwan.
+\doublespacing
+I thank Tadashi Fukami, my supervisor, for everything over the past five years. Since my first day at Stanford, Tad showed me incredible patience, gave me the freedom to pursue the research that I wanted, and was always there for me to poke my head into his office to ask for his opinion. 
+His support of my career as a scientist extends to projects of mine that were not directly related to my dissertation, and he was often more excited about my success than myself.
+I am incredibly fortunate to have Tad as a mentor and as a friend.
+\par
+
+ 
+My committee members, Peter Adler, Erin Mordecai, Kabir Peay, have each provided helpful comments along the way. They have offered different perspectives that improved my thinking and the way I approach research questions. Before joining Stanford, Takeshi Miki, Chih-hao Hsieh, and Tzung-Su Ding taught me how exciting it could be to pursue a career in ecology and have been important role models for me.
+\par
+
+
+This dissertation benefited a ton from daily discussions with members of the Fukami lab and would not have been possible without their friendship and mentorship.
+During my first year, Holly Moeller, Meike Wittmann, Peter Zee, Rachel Vannette, Matt Knope, and Devin Leopold shared with me their wisdom of how to navigate a new academic environment. Even though we only overlapped for a short amount of time, their warm support through emails has never ended.
+Nick Hendershot, Priscilla San Juan, Callie Chappell, Maggie Warren, Niv DeMalach, Leslie Decker, and Megan Morris provided tremendous help on improving my writing and presentations; they also balanced the hectic last couple years with humor and empathy.
+Special thanks to Manpreet Dhami and Hirokazu Toju, who dedicated their time and have taught me everything I know about molecular ecology. The day-long discussions with Andrew Letten and Joe Wan were critical to the development of my interest as a theoretical ecologist and continue to be so inspiring.
+\par
+
+
+The graduate students of the EEB community made the department a friendly environment.
+Glade Dlott, Laura Bogar, Nora Duncritts, Max Segnitz, and Gabriel Smith shared with me their knowledge on soil microbes and provided countless logistical support.
+Jeff Smith, Beth Morrison, Chris Anderson, Suzanne Ou, and Kelley Langhans made the program a fun place, one that tolerates my sarcasm and my mild response to their enthusiasm. 
+I thank Marion Donald and Jamie McDevitt-Irwin for their accompany and mental support during the greenhouse experiment and long days in the lab.
+\par
+
+
+Many friends in California and Taiwan accompanied me during this Ph.D. and have an important influence on my life philosophy. 
+Antony Tsun-Yuan Wu, Warren Jonhow Lee, Yen Su, Sean Ling-Hsiang Chen, and friends from STSA helped me to establish a new rhythm of life at Stanford. I am lucky to have them around for chatting, drinking, and going to shows together.
+Old lab friends from IONTU, Oscar Feng-Hsun Chang, Cot Ting-Chun Kuo, Cheng-Han Tsai, and Yi-Chun Yeh, started their studies abroad around the same time, and have been there for me as we went through many Ph.D. milestones together. 
+Finally, I thank friends from NTU Forestry, in particular, Coco Nai-Tzu Teng, Ruby Ying-Ru Li, Hao Hsu, Shun-Yun Chang, and Tsung-Yo Hsieh. Their friendship always reminds me of my original aspiration and why was I able to come this far.
+\par
+
+
+My partner, Ariel Yu-Hsiang Tseng, has been the most important support during the journey. Her confidence in my success has always been greater than my own, and she has remained hopeful throughout our long-distance relationship. 
+Every day, I am motivated by her firm belief that there will soon be no more goodbyes at the airport as we count down the days we have to endure the miles apart. 
+I am grateful for her encouragement and I know I will continue to be fortunate to have her unconditional support.
+\par 
+
+
+Lastly, I thank my family. I have chosen a career path that worries them, but they have always encouraged me to pursue my interests freely. If I am ever recognized as a decent person, it was only because my parents gave me all the freedom that I could've asked for, as well as all their love and support. 
