--- a/ThesisBibliography.bib
+++ b/ThesisBibliography.bib
@@ -657,7 +657,7 @@ url="https://doi.org/10.1007/s11258-016-0697-3"
 @article{Menge2012,
   title={Nitrogen and phosphorus limitation over long-term ecosystem development in terrestrial ecosystems},
   author={Menge, Duncan NL and Hedin, Lars O and Pacala, Stephen W},
-  journal={PLOS ONE},
+  journal={PLoS ONE},
   volume={7},
   number={8},
   pages={e42045},
@@ -1286,7 +1286,7 @@ year = {2017}
 
 @article{Tello2015,
 author = {Tello, J. Sebasti\'{a}n AND Myers, Jonathan A. AND Mac\'{i}a, Manuel J. AND Fuentes, Alfredo F. AND Cayola, Leslie AND Arellano, Gabriel AND Loza, M. Isabel AND Torrez, Vania AND Cornejo, Maritza AND Miranda, Tatiana B. AND Jørgensen, Peter M.},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 publisher = {Public Library of Science},
 title = {Elevational Gradients in β-Diversity Reflect Variation in the Strength of Local Community Assembly Mechanisms across Spatial Scales},
 year = {2015},
@@ -1330,7 +1330,7 @@ year = {2011}
 % Start of bioinformatics chunk
 @article{Tanabe2013,
 author = {Tanabe, Akifumi S. AND Toju, Hirokazu},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 publisher = {Public Library of Science},
 title = {Two New Computational Methods for Universal {DNA} Barcoding: A Benchmark Using Barcode Sequences of Bacteria, Archaea, Animals, Fungi, and Land Plants},
 year = {2013},
@@ -1371,7 +1371,7 @@ eprint = {/oup/backfile/content_public/journal/bioinformatics/27/16/10.1093_bioi
 
 @article{Rognes2016,
 title = {{VSEARCH}: a versatile open source tool for metagenomics},
-author = {Rognes, Torbjørn and Flouri, Tomáš and Nichols, Ben and Quince, Christopher and Mah{\'e}, Frédéric},
+author = {Rognes, Torbj{\o}rn and Flouri, Tom{\'a}{\v{s}} and Nichols, Ben and Quince, Christopher and Mah{\'e}, Fr{\'e}d{\'e}ric},
 year = {2016},
 month = {oct}, 
 keywords = {Clustering, Chimera detection, Searching, Masking, Shuffling, Parallellization, Metagenomics, Alignment, Sequences, Dereplication},
@@ -1413,7 +1413,7 @@ eprint = {https://doi.org/10.3852/14-293}
 
 @Article{McMurdie2013,
 author = {Paul J. McMurdie and Susan Holmes},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 pages = {e61217},
 title = {phyloseq: An {R} package for reproducible interactive analysis and graphics of microbiome census data},
 volume = {8},
@@ -1824,11 +1824,11 @@ year = {2011}
 
 @article{ZeeFukami2015,
 author = {Zee, Peter C. and Fukami, Tadashi},
-title = {Complex organism-environment feedbacks buffer species diversity against habitat fragmentation},
+title = {Complex organism--environment feedbacks buffer species diversity against habitat fragmentation},
 journal = {Ecography},
 volume = {38},
 number = {4},
-pages = {370-379},
+pages = {370--379},
 doi = {10.1111/ecog.01027},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.01027},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.01027},
@@ -1883,7 +1883,7 @@ eprint = {/oup/backfile/content_public/journal/aobpla/7/10.1093_aobpla_plv021/2/
 
 @article{Meaden2016,
 author = {Meaden, S. and Metcalf, C.J.E. and Koskella, B.},
-title = {The effects of host age and spatial location on bacterial community composition in the English Oak tree (\textit{{Q}uercus robur})},
+title = {The effects of host age and spatial location on bacterial community composition in the {E}nglish {O}ak tree (\textit{{Q}uercus robur})},
 journal = {Environmental Microbiology Reports},
 volume = {8},
 number = {5},
@@ -2502,7 +2502,7 @@ year = {2013}
 
 @article{Toju2012,
     author = {Toju, Hirokazu AND Tanabe, Akifumi S. AND Yamamoto, Satoshi AND Sato, Hirotoshi},
-    journal = {PLOS ONE},
+    journal = {PLoS ONE},
     publisher = {Public Library of Science},
     title = {High-Coverage {ITS} Primers for the {DNA}-Based Identification of Ascomycetes and Basidiomycetes in Environmental Samples},
     year = {2012},
@@ -4271,7 +4271,7 @@ doi = {10.1371/journal.pone.0021264},
 editor = {Hector, Andrew},
 file = {:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Swenson - 2011 - Phylogenetic beta diversity metrics, trait evolution and inferring the functional beta diversity of communities.pdf:pdf},
 issn = {1932-6203},
-journal = {PlOS ONE},
+journal = {PloS ONE},
 keywords = {Altitude,Biodiversity,Geography,India,Phylogeny,Principal Component Analysis,Quantitative Trait, Heritable,Rain},
 month = jan,
 number = {6},
@@ -4386,7 +4386,7 @@ doi = {10.1371/journal.pone.0005695},
 editor = {Freckleton, Rob P.},
 file = {:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Cadotte et al. - 2009 - Using phylogenetic, functional and trait diversity to understand patterns of plant community productivity.pdf:pdf;:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Cadotte et al. - 2009 - Using phylogenetic, functional and trait diversity to understand patterns of plant community productivity(2).pdf:pdf},
 issn = {1932-6203},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 keywords = {Agriculture,Biological,Genetic Variation,Heritable,Models,Multivariate Analysis,Organ Size,Phylogeny,Plants,Plants: genetics,Plants: growth \& development,Quantitative Trait,Seeds,Seeds: anatomy \& histology},
 month = jan,
 number = {5},
@@ -5119,7 +5119,7 @@ doi = {10.1371/journal.pone.0035472},
 editor = {Nogues-Bravo, David},
 file = {:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Gonz\'{a}lez-Caro et al. - 2012 - Sensitivity of metrics of phylogenetic structure to scale, source of data and species pool of hummingbird.pdf:pdf},
 issn = {1932-6203},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 keywords = {Altitude,Analysis of Variance,Animals,Bayes Theorem,Birds,Birds: genetics,Colombia,Computational Biology,Demography,Ecosystem,Models, Genetic,Museums,Phylogeny,Phylogeography,Species Specificity},
 month = jan,
 number = {4},
@@ -5368,7 +5368,7 @@ volume = {32},
 year = {2012}
 }
 @article{Fitzpatrick2014,
-abstract = {Local adaptation is a central feature of most species occupying spatially heterogeneous environments, and may factor critically in responses to environmental change. However, most efforts to model the response of species to climate change ignore intraspecific variation due to local adaptation. Here, we present a new perspective on spatial modelling of organism-environment relationships that combines genomic data and community-level modelling to develop scenarios regarding the geographic distribution of genomic variation in response to environmental change. Rather than modelling species within communities, we use these techniques to model large numbers of loci across genomes. Using balsam poplar (Populus balsamifera) as a case study, we demonstrate how our framework can accommodate nonlinear responses of loci to environmental gradients. We identify a threshold response to temperature in the circadian clock gene GIGANTEA-5 (GI5), suggesting that this gene has experienced strong local adaptation to temperature. We also demonstrate how these methods can map ecological adaptation from genomic data, including the identification of predicted differences in the genetic composition of populations under current and future climates. Community-level modelling of genomic variation represents an important advance in landscape genomics and spatial modelling of biodiversity that moves beyond species-level assessments of climate change vulnerability.},
+abstract = {Local adaptation is a central feature of most species occupying spatially heterogeneous environments, and may factor critically in responses to environmental change. However, most efforts to model the response of species to climate change ignore intraspecific variation due to local adaptation. Here, we present a new perspective on spatial modelling of organism--environment relationships that combines genomic data and community-level modelling to develop scenarios regarding the geographic distribution of genomic variation in response to environmental change. Rather than modelling species within communities, we use these techniques to model large numbers of loci across genomes. Using balsam poplar (Populus balsamifera) as a case study, we demonstrate how our framework can accommodate nonlinear responses of loci to environmental gradients. We identify a threshold response to temperature in the circadian clock gene GIGANTEA-5 (GI5), suggesting that this gene has experienced strong local adaptation to temperature. We also demonstrate how these methods can map ecological adaptation from genomic data, including the identification of predicted differences in the genetic composition of populations under current and future climates. Community-level modelling of genomic variation represents an important advance in landscape genomics and spatial modelling of biodiversity that moves beyond species-level assessments of climate change vulnerability.},
 author = {Fitzpatrick, Matthew C. and Keller, Stephen R.},
 doi = {10.1111/ele.12376},
 editor = {Vellend, Mark},
@@ -7234,7 +7234,7 @@ author = {Dinnage, Russell},
 doi = {10.1371/journal.pone.0007071},
 file = {:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Dinnage - 2009 - Disturbance alters the phylogenetic composition and structure of plant communities in an old field system.pdf:pdf},
 issn = {1932-6203},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 keywords = {Biodiversity,Biological Evolution,Canada,Conservation of Natural Resources,Ecosystem,Environment,Geography,Models, Statistical,Models, Theoretical,Phylogeny,Plant Physiological Phenomena,Plants,Plants: classification,Species Specificity,Time Factors},
 month = jan,
 number = {9},
@@ -10899,7 +10899,7 @@ doi = {10.1371/journal.pone.0019363},
 editor = {Hector, Andrew},
 file = {:C$\backslash$:/Users/Andrew/Documents/Mendeley Desktop/Cadotte, Strauss - 2011 - Phylogenetic Patterns of Colonization and Extinction in Experimentally Assembled Plant Communities.pdf:pdf},
 issn = {19326203},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 keywords = {Phylogenetic succession},
 mendeley-tags = {Phylogenetic succession},
 number = {5},
